ensure top/bottom and left/right relations for /FitR boxes

adresses the usability problem described in
https://bugzilla.gnome.org/show_bug.cgi?id=695524